--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -31,55 +31,37 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <android.support.constraint.ConstraintLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
-                    android:text="From Date"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginLeft="140dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="140dp"
-                    android:text="To Date"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/textView6"
-                    app:layout_constraintTop_toTopOf="parent" />
 
 
                 <EditText
                     android:id="@+id/datefrom_ID"
-                    android:layout_width="250dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="44dp"
-                    android:layout_marginStart="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="22dp"
+                    android:layout_marginTop="22dp"
+                    android:layout_marginEnd="34dp"
                     android:layout_marginBottom="10dp"
+                    android:layout_toStartOf="@+id/datepick_ID"
                     android:background="@drawable/rounded_border_edittext"
                     android:ems="10"
                     android:focusable="false"
                     android:gravity="center"
-                    android:padding="5sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toLeftOf="@+id/datepick_ID"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView7"
-                    app:layout_constraintVertical_bias="0.0" />
+                    android:hint="From Date - To Date"
+                    android:padding="5sp"/>
 
                 <ImageView
                     android:id="@+id/datepick_ID"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="34dp"
                     android:layout_marginBottom="10dp"
                     android:onClick="onClick"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -88,7 +70,7 @@
                     app:layout_constraintVertical_bias="1.0"
                     app:srcCompat="@drawable/date" />
 
-            </android.support.constraint.ConstraintLayout>
+            </RelativeLayout>
 
         </android.support.v7.widget.CardView>
 
