--- a/app/src/main/res/layout/activity_add_users.xml
+++ b/app/src/main/res/layout/activity_add_users.xml
@@ -78,9 +78,9 @@
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/profile_id"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="46dp"
             android:layout_margin="10dp"
-            android:background="@drawable/rounded_border_edittext"
+            android:background="@android:drawable/btn_dropdown"
             android:ems="10"
             android:padding="10dp" />
 
