--- a/app/src/main/res/layout/report_list_row.xml
+++ b/app/src/main/res/layout/report_list_row.xml
@@ -26,7 +26,7 @@
             android:textAlignment="center"
             android:textSize="10dp"
 
-            android:textColor="@color/colorblue"/>
+            android:textColor="@color/colorPrimaryDark"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
 </layout>
