--- a/app/src/main/res/layout/activity_add_users.xml
+++ b/app/src/main/res/layout/activity_add_users.xml
@@ -53,9 +53,9 @@
         <EditText
             android:id="@+id/username_id"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:background="@drawable/rounded_border_edittext"
+            android:background="@drawable/border"
             android:ems="10"
             android:hint="Name"
             android:inputType="textPersonName"
@@ -78,11 +78,11 @@
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/profile_id"
             android:layout_width="match_parent"
-            android:layout_height="46dp"
+            android:layout_height="44dp"
             android:layout_margin="10dp"
             android:background="@android:drawable/btn_dropdown"
             android:ems="10"
-            android:padding="10dp" />
+            android:paddingLeft="5dp" />
 
 
 
@@ -103,9 +103,9 @@
         <EditText
             android:id="@+id/userID"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="40dp"
             android:layout_margin="10dp"
-            android:background="@drawable/rounded_border_edittext"
+            android:background="@drawable/border"
             android:ems="10"
             android:hint="User ID"
             android:paddingLeft="10dp"
